Started working on the endpoint POST /game/{game}/cards/playing/text/{id}
